- correction to make overflow working in the structurtree
git-svn-id: https://efaps.googlecode.com/svn/trunk@1442 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0

--- a/webapp/src/main/java/org/efaps/webapp/components/tree/StructurTree.css
+++ b/webapp/src/main/java/org/efaps/webapp/components/tree/StructurTree.css
@@ -20,8 +20,6 @@ div.wicket-tree {
   font-size: 9pt;  
   white-space: nowrap;  
   border: 0px solid #ccc;
-  width: 100%;
-  overflow: auto;
   margin: 0;
   line-height: 1.5em;
 }
@@ -29,21 +27,18 @@ div.wicket-tree {
 div.wicket-tree a {
   text-decoration: none;
   color: #00A000;
-  float: left;  
 }
 
 div.wicket-tree div.row,
 div.wicket-tree div.row-selected {
   height: 1.5em;
-  overflow:hidden;  
-  width: 100%;
-  padding: 0px; margin: 0px;
+padding: 0px; 
+margin: 0px;
 }
   
 div.wicket-tree div.a_ {
   /* prevent hiding text */
   margin: 0px; 
-  width: 2000px;
 }
 
 div.wicket-tree span.junction,
@@ -55,7 +50,7 @@ div.wicket-tree span.indent-line,
 div.wicket-tree span.icon {
   float: left;
   width: 18px;
-  height: 1.5em;  
+  height: 1.5em;
   min-height: 18px;
 }
 
@@ -97,10 +92,7 @@ div.wicket-tree span.corner {
   background-image: url("tree-images.png"); 
   background-position: -54px center;
 }
-div.wicket-tree span.indent {
-  clear: left;
-  float: left;
-}
+
 
 div.wicket-tree a:hover {
   text-decoration: underline;
@@ -121,12 +113,10 @@ div.wicket-tree a {
 div.wicket-tree span.indent-blank {
   width: 18px;
   height: 1em;
-  float: left;   
 }
 
 div.wicket-tree span.indent-line {
   _margin-left: 3px;  /* ie 3px bug fix*/
-  overflow: hidden;
   background-image: url("tree-images.png"); 
   background-position: -36px 0px;
   background-repeat: repeat-y;
@@ -134,7 +124,7 @@ div.wicket-tree span.indent-line {
 
 div.wicket-tree div.row,
 div.wicket-tree div.row-selected {
-  overflow: hidden;
+ 
   clear: both;
 }
 
